--- a/3-new/day3/day3.cabal
+++ b/3-new/day3/day3.cabal
@@ -35,6 +35,7 @@ library
   ghc-options: -Wall -Wcompat -Widentities -Wincomplete-record-updates -Wincomplete-uni-patterns -Wmissing-export-lists -Wmissing-home-modules -Wpartial-fields -Wredundant-constraints
   build-depends:
       base >=4.7 && <5
+    , regex-tdfa
   default-language: Haskell2010
 
 executable day3-exe
@@ -49,6 +50,7 @@ executable day3-exe
   build-depends:
       base >=4.7 && <5
     , day3
+    , regex-tdfa
   default-language: Haskell2010
 
 test-suite day3-test
@@ -64,4 +66,5 @@ test-suite day3-test
   build-depends:
       base >=4.7 && <5
     , day3
+    , regex-tdfa
   default-language: Haskell2010
